recursion.lessons.recursion.koch.Koch.scala.error
Koch:14: error: not found: value angle
	droite(angle)
               ^Koch:15: error: not found: value level
	snowSide(level-1,length)
                 ^